#GLOBAL
cmake_minimum_required(VERSION 2.8)
project(karakaxa)

# FIND_PACKAGE( Qt4 REQUIRED )

INCLUDE("karakaxa.cmake")

FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtSql REQUIRED)
SET( QT_USE_PHONON TRUE )
SET( QT_USE_QTSQL TRUE )
SET( QT_USE_XML TRUE)
SET( QT_USE_NETWORK TRUE )
# INCLUDE_DIRECTORIES(${QT_QTSQL_INCLUDE_DIR})


SET( QT_USE_PHONON TRUE ) 
# SET( QT_USE_SQL TRUE ) 
SET( QT_USE_XML TRUE)

INCLUDE_DIRECTORIES(./src/lib/)
INCLUDE_DIRECTORIES(./src/lib/database)
INCLUDE_DIRECTORIES(./src/lib/core )
INCLUDE_DIRECTORIES(./src/lib/files )
INCLUDE_DIRECTORIES(./src/lib/views )

INCLUDE_DIRECTORIES(${KDE_INCLUDE})
INCLUDE_DIRECTORIES(${TAGLIB_INCLUDE})

INCLUDE_DIRECTORIES(${QT_QTSQL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QT_QTXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QT_QTNETWORK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE(${QT_USE_FILE})

ADD_DEFINITIONS( -Wall -Wno-reorder)

if(DEBUG)
    ADD_DEFINITIONS(-DDEBUG -ggdb)
endif()

if(EMBEDDED_MYSQL)
    ADD_DEFINITIONS(-DEMBEDDED_MYSQL)
    INCLUDE_DIRECTORIES(src/embeddedMysql)
    subdirs(src/embeddedMysql)
endif()

if(USE_LAST_FM)
    subdirs(src/lastFm)
    INCLUDE_DIRECTORIES(src/lastFm)
endif()

# INCLUDE(${QT_USE_FILE})


subdirs(src/lib)
subdirs(src/player)

INSTALL(DIRECTORY data/icons DESTINATION ${DATA_DIR}/karakaxa)
INSTALL(DIRECTORY data/sql DESTINATION ${DATA_DIR}/karakaxa)
